# near-escrow

./: .gitignore  Cargo.toml  README.md  build.sh
res/: near_escrow.wasm
src/: lib.rs
